# firstframe-ai

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: generate.py  health.py
backend/app/api/schemas/: __init__.py  story.py
backend/app/application/: __init__.py  example_loader.py  knowledge_loader.py  prompt_loader.py  workflow.py
backend/app/core/: __init__.py  artifacts.py
backend/app/core/domains/: __init__.py  plugin.py  registry.py
backend/app/core/harness/: __init__.py  evaluation.py  kernel.py  planning.py  reasoning.py
backend/app/infrastructure/: __init__.py  openai_provider.py
backend/tests/: test_api_schemas.py  test_domain_registry.py  test_example_loader.py  test_generate_workflow.py  test_knowledge_loader.py  test_openai_provider.py  test_prompt_loader.py  test_structured_output_contracts.py
docs/: architecture.md  design-decisions.md  domain-short-film.md  kernel.md  roadmap.md  structured-output-contracts.md  workflow.md
domains/: README.md
domains/short-film/: README.md  output_schema.json
domains/short-film/examples/: coming_of_age.json  family_drama.json  friendship.json  slice_of_life.json  thriller.json
domains/short-film/knowledge/: film_glossary.json  film_rules.json  story_patterns.json
frontend/: package-lock.json  package.json
frontend/app/: StoryFlowVisualization.tsx  StoryResultCards.tsx  ThinkingTimeline.tsx  apiClient.ts  globals.css  language.ts  layout.tsx  page.tsx
(+3 files in other folders)
